--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -329,6 +329,7 @@ nav ul {
 /* ================= footer section ================= */
 
 .footer {
+    bottom: 0;
     margin-top: 5rem;
     width: 100%;    
     display: flex;  
