--- a/averagedown/styles.css
+++ b/averagedown/styles.css
@@ -33,9 +33,8 @@ html {
 p {
   font-size: 1.6rem;
 }
-
 .btn {
-  width: 15rem;
+  width: auto;
   position: relative;
   display: inline-flex;
   justify-content: center;
@@ -91,8 +90,10 @@ p {
 }
 .col input {
   margin-top: 12px;
-  border-radius: 12px;
-  height: 2.7rem;
+  border-radius: 25px;
+  font-size: 16px;
+  height: 4rem;
+  width: 100%;
   padding: 10px;
   color: #000;
 }
@@ -142,11 +143,62 @@ p {
   .results h3 {
     margin-bottom: 15px;
   }
+
+  .btn {
+    margin: 2rem auto 0 auto;
+  }
+}
+
+@media (min-width: 576px) {
+  .row {
+    width: 100%;
+  }
+  .col {
+    height: 10rem;
+    padding: 10px;
+  }
+  .col input {
+    border-radius: 25px;
+    height: 4rem;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .results {
+    font-size: 20px;
+    margin: 2rem auto;
+  }
+  .results h3 {
+    margin-bottom: 15px;
+  }
   .calculate {
-    width: 88%;
+    width: 42rem;
   }
   .btn {
     width: 100%;
     margin: 2rem auto 0 auto;
+  }
+}
+
+@media (min-width: 445px) {
+  .row {
+    width: 100%;
+  }
+  .col {
+    height: 10rem;
+    padding: 10px;
+  }
+
+  .col input {
+    border-radius: 25px;
+    height: 4rem;
+    padding: 10px;
+    font-size: 16px;
+  }
+  .results {
+    font-size: 20px;
+    margin: 2rem auto;
+  }
+  .results h3 {
+    margin-bottom: 15px;
   }
 }
