--- a/averagedown/styles.css
+++ b/averagedown/styles.css
@@ -40,6 +40,8 @@ p {
   justify-content: center;
   align-items: center;
   padding: 1rem;
+  padding-left: 1.7rem;
+  padding-right: 1.7rem;
   margin: 3rem auto;
   font-size: 1.5rem;
   font-weight: 600;
@@ -191,7 +193,7 @@ p {
   .col input {
     border-radius: 25px;
     height: 4rem;
-    padding: 10px;
+    padding: 2rem;
     font-size: 16px;
   }
   .results {
