--- a/averagedown/styles.css
+++ b/averagedown/styles.css
@@ -39,13 +39,14 @@ p {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 0.8rem;
   padding-left: 1.7rem;
   padding-right: 1.7rem;
   margin: 3rem auto;
   font-size: 1.5rem;
+  color: #ffffff;
   font-weight: 600;
-  border-radius: 25px;
+  border-radius: 12px;
   background-color: var(--theme-color);
   box-shadow: 0 0 20px #000000;
 }
@@ -106,6 +107,60 @@ p {
   margin-bottom: 5px;
 }
 
+.calculate-btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
+}
+.tabs {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 50px;
+}
+
+.tab-btn {
+  background-color: var(--box-border-color);
+  padding: 10px 20px;
+  cursor: pointer;
+  color: #ababab;
+  font-weight: bold;
+  transition: 0.3s ease-in-out;
+}
+
+.avg {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.calc {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+#calcRow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+#calcRow label {
+  font-size: 1.6rem;
+}
+
+.tab-btn.active {
+  background-color: var(--theme-color);
+  color: white;
+}
+
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
+}
 /* ##################################### */
 /* ---------responsive styling---------- */
 /* ##################################### */
